# rules_android

./: MODULE.bazel  androidstudio.BUILD.bazel  rules_android_maven_install.json
mobile_install/: adapters_base.bzl  tools.bzl  utils.bzl
mobile_install/adapters/: kt_jvm_import.bzl  kt_jvm_library.bzl
